homotopy-core/tests/snapshots/contraction__1-inverse_then_endomorphism.snap
---
source: homotopy-core/tests/contraction.rs
expression: "inverse_then_f.identity().contract(Boundary::Target.into(), &[], 0, None,\n            &sig).unwrap().target()"
---
DiagramN {
    source: Diagram0(
        0:0⁺,
    ),
    cospans: [],
}
