homotopy-core/tests/snapshots/contraction__2-endomorphism_then_inverse.snap
---
source: homotopy-core/tests/contraction.rs
expression: "e_then_inverse.identity().contract(Boundary::Target.into(), &[], 0, None,\n            &sig).unwrap().target()"
---
DiagramN {
    source: DiagramN {
        source: Diagram0(
            0:0,
            +,
        ),
        cospans: [
            Cospan {
                forward: Rewrite0(
                    Diagram0(
                        0:0,
                        +,
                    ),
                    Diagram0(
                        1:1,
                        +,
                    ),
                    Some(
                        Label(
                            BoundaryPath(
                                Source,
                                0,
                            ),
                            {
                                [],
                            },
                        ),
                    ),
                ),
                backward: Rewrite0(
                    Diagram0(
                        0:0,
                        +,
                    ),
                    Diagram0(
                        1:1,
                        +,
                    ),
                    Some(
                        Label(
                            BoundaryPath(
                                Target,
                                0,
                            ),
                            {
                                [],
                            },
                        ),
                    ),
                ),
            },
        ],
    },
    cospans: [],
}
