homotopy-core/tests/snapshots/contraction__2-inverse_then_endomorphism.snap
---
source: homotopy-core/tests/contraction.rs
expression: "inverse_then_e.identity().contract(Boundary::Target.into(), &[], 0, None,\n                                   &sig).unwrap().target()"
---
DiagramN {
    source: DiagramN {
        source: Diagram0(
            0:0,
        ),
        cospans: [
            Cospan {
                forward: Rewrite0(
                    0:0,
                    1:1,
                    Label(
                        [
                            (1:1, [Boundary(Source)]),
                        ],
                    ),
                ),
                backward: Rewrite0(
                    0:0,
                    1:1,
                    Label(
                        [
                            (1:1, [Boundary(Target)]),
                        ],
                    ),
                ),
            },
        ],
    },
    cospans: [],
}
