homotopy-core/tests/snapshots/contraction__endomorphism_on_weak_unit_composed_with_weak_unit.snap
---
source: homotopy-core/tests/contraction.rs
expression: f_then_weak
---
DiagramN {
    source: DiagramN {
        source: Diagram0(
            0:0⁺,
        ),
        cospans: [
            Cospan {
                forward: Rewrite0,
                backward: Rewrite0,
            },
        ],
    },
    cospans: [
        Cospan {
            forward: RewriteN {
                dimension: 1,
                cones: [
                    Cone {
                        index: 0,
                        internal: ConeInternal {
                            source: [
                                Cospan {
                                    forward: Rewrite0,
                                    backward: Rewrite0,
                                },
                            ],
                            target: Cospan {
                                forward: Rewrite0(
                                    0:0⁺,
                                    1:2⁺,
                                    Some(
                                        (
                                            1,
                                            BoundaryPath(
                                                Source,
                                                1,
                                            ),
                                            [],
                                        ),
                                    ),
                                ),
                                backward: Rewrite0(
                                    0:0⁺,
                                    1:2⁺,
                                    Some(
                                        (
                                            1,
                                            BoundaryPath(
                                                Target,
                                                1,
                                            ),
                                            [],
                                        ),
                                    ),
                                ),
                            },
                            regular_slices: [
                                Rewrite0(
                                    0:0⁺,
                                    1:2⁺,
                                    Some(
                                        (
                                            1,
                                            BoundaryPath(
                                                Source,
                                                1,
                                            ),
                                            [],
                                        ),
                                    ),
                                ),
                                Rewrite0(
                                    0:0⁺,
                                    1:2⁺,
                                    Some(
                                        (
                                            1,
                                            BoundaryPath(
                                                Target,
                                                1,
                                            ),
                                            [],
                                        ),
                                    ),
                                ),
                            ],
                            singular_slices: [
                                Rewrite0(
                                    0:0⁺,
                                    1:2⁺,
                                    Some(
                                        (
                                            1,
                                            BoundaryPath(
                                                Source,
                                                0,
                                            ),
                                            [
                                                Singular(
                                                    0,
                                                ),
                                            ],
                                        ),
                                    ),
                                ),
                            ],
                        },
                    },
                ],
            },
            backward: RewriteN {
                dimension: 1,
                cones: [
                    Cone {
                        index: 0,
                        internal: ConeInternal {
                            source: [
                                Cospan {
                                    forward: Rewrite0,
                                    backward: Rewrite0,
                                },
                            ],
                            target: Cospan {
                                forward: Rewrite0(
                                    0:0⁺,
                                    1:2⁺,
                                    Some(
                                        (
                                            1,
                                            BoundaryPath(
                                                Source,
                                                1,
                                            ),
                                            [],
                                        ),
                                    ),
                                ),
                                backward: Rewrite0(
                                    0:0⁺,
                                    1:2⁺,
                                    Some(
                                        (
                                            1,
                                            BoundaryPath(
                                                Target,
                                                1,
                                            ),
                                            [],
                                        ),
                                    ),
                                ),
                            },
                            regular_slices: [
                                Rewrite0(
                                    0:0⁺,
                                    1:2⁺,
                                    Some(
                                        (
                                            1,
                                            BoundaryPath(
                                                Source,
                                                1,
                                            ),
                                            [],
                                        ),
                                    ),
                                ),
                                Rewrite0(
                                    0:0⁺,
                                    1:2⁺,
                                    Some(
                                        (
                                            1,
                                            BoundaryPath(
                                                Target,
                                                1,
                                            ),
                                            [],
                                        ),
                                    ),
                                ),
                            ],
                            singular_slices: [
                                Rewrite0(
                                    0:0⁺,
                                    1:2⁺,
                                    Some(
                                        (
                                            1,
                                            BoundaryPath(
                                                Target,
                                                0,
                                            ),
                                            [
                                                Singular(
                                                    0,
                                                ),
                                            ],
                                        ),
                                    ),
                                ),
                            ],
                        },
                    },
                ],
            },
        },
        Cospan {
            forward: RewriteN {
                dimension: 1,
                cones: [],
            },
            backward: RewriteN {
                dimension: 1,
                cones: [],
            },
        },
    ],
}
