homotopy-core/tests/snapshots/contraction__scalar_biased_left.snap
---
source: homotopy-core/tests/contraction.rs
assertion_line: 26
expression: "scalar_then_scalar.identity().contract(Boundary::Target.into(), &[], 0,\n            Some(Bias::Lower), &sig).unwrap().target()"
---
DiagramN {
    source: DiagramN {
        source: Diagram0(
            0:0^+,
        ),
        cospans: [],
    },
    cospans: [
        Cospan {
            forward: RewriteN {
                dimension: 1,
                cones: [
                    Cone {
                        index: 0,
                        internal: ConeInternal {
                            source: [],
                            target: Cospan {
                                forward: Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Source, 1), []),
                                        ),
                                    ),
                                ),
                                backward: Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Target, 1), []),
                                        ),
                                    ),
                                ),
                            },
                            regular_slices: [
                                Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Source, 0), [Regular(0)]),
                                        ),
                                    ),
                                ),
                            ],
                            singular_slices: [],
                        },
                    },
                    Cone {
                        index: 0,
                        internal: ConeInternal {
                            source: [],
                            target: Cospan {
                                forward: Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Source, 1), []),
                                        ),
                                    ),
                                ),
                                backward: Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Target, 1), []),
                                        ),
                                    ),
                                ),
                            },
                            regular_slices: [
                                Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Source, 0), [Regular(0)]),
                                        ),
                                    ),
                                ),
                            ],
                            singular_slices: [],
                        },
                    },
                ],
            },
            backward: RewriteN {
                dimension: 1,
                cones: [
                    Cone {
                        index: 0,
                        internal: ConeInternal {
                            source: [],
                            target: Cospan {
                                forward: Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Source, 1), []),
                                        ),
                                    ),
                                ),
                                backward: Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Target, 1), []),
                                        ),
                                    ),
                                ),
                            },
                            regular_slices: [
                                Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Target, 0), [Regular(0)]),
                                        ),
                                    ),
                                ),
                            ],
                            singular_slices: [],
                        },
                    },
                    Cone {
                        index: 0,
                        internal: ConeInternal {
                            source: [],
                            target: Cospan {
                                forward: Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Source, 1), []),
                                        ),
                                    ),
                                ),
                                backward: Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Target, 1), []),
                                        ),
                                    ),
                                ),
                            },
                            regular_slices: [
                                Rewrite0(
                                    0:0^+,
                                    1:2^+,
                                    Label(
                                        Some(
                                            (1, BoundaryPath(Target, 0), [Regular(0)]),
                                        ),
                                    ),
                                ),
                            ],
                            singular_slices: [],
                        },
                    },
                ],
            },
        },
    ],
}
