homotopy-core/tests/snapshots/contraction__scalar_biased_right.snap
---
source: homotopy-core/tests/contraction.rs
expression: "d.identity().contract(&Boundary::Target.into(), &[], 0, Some(Bias::Higher),\n                      &sig).unwrap().target()"

---
DiagramN {
    source: DiagramN {
        source: Diagram0(
            0:0,
        ),
        cospans: [],
    },
    cospans: [
        Cospan {
            forward: RewriteN {
                dimension: 1,
                cones: [
                    Cone {
                        index: 0,
                        internal: ConeInternal {
                            source: [],
                            target: Cospan {
                                forward: Rewrite0(
                                    0:0,
                                    2:2,
                                ),
                                backward: Rewrite0(
                                    0:0,
                                    2:2,
                                ),
                            },
                            slices: [],
                        },
                    },
                    Cone {
                        index: 0,
                        internal: ConeInternal {
                            source: [],
                            target: Cospan {
                                forward: Rewrite0(
                                    0:0,
                                    1:2,
                                ),
                                backward: Rewrite0(
                                    0:0,
                                    1:2,
                                ),
                            },
                            slices: [],
                        },
                    },
                ],
            },
            backward: RewriteN {
                dimension: 1,
                cones: [
                    Cone {
                        index: 0,
                        internal: ConeInternal {
                            source: [],
                            target: Cospan {
                                forward: Rewrite0(
                                    0:0,
                                    2:2,
                                ),
                                backward: Rewrite0(
                                    0:0,
                                    2:2,
                                ),
                            },
                            slices: [],
                        },
                    },
                    Cone {
                        index: 0,
                        internal: ConeInternal {
                            source: [],
                            target: Cospan {
                                forward: Rewrite0(
                                    0:0,
                                    1:2,
                                ),
                                backward: Rewrite0(
                                    0:0,
                                    1:2,
                                ),
                            },
                            slices: [],
                        },
                    },
                ],
            },
        },
    ],
}
