homotopy-core/tests/snapshots/contraction__scalar_inverse_unbiased.snap
---
source: homotopy-core/tests/contraction.rs
expression: "scalar_then_inverse.identity().contract(Boundary::Target.into(), &[], 0,\n            Some(Bias::Same), &sig).unwrap().target()"
---
DiagramN {
    source: DiagramN {
        source: Diagram0(
            0:0⁺,
        ),
        cospans: [],
    },
    cospans: [],
}
